# clu-governance

./: .gitignore  CHANGELOG.md  CHECKSUMS.sha256  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  claims-and-limitations.md  claude-code-pretooluse.md  cli-contract.md  development-methodology.md  engineering-decisions.md  future-signed-evidence.md  git-diff-adapter.md  provenance.md  quickstart.md  security-boundaries.md  source-mutation-policy-gate.md
docs/assets/: generate_policy_evidence_demo.swift
examples/: README.md  example_allowed_mutation_request.json  example_denied_mutation_request.json  example_rollback_snapshot.json  example_source_mutation_policy.json
examples/claude-code-pretooluse/: README.md
src/clu_governance/: __init__.py  agent_preflight.py  bundle_verifier.py  claude_code_pretooluse.py  cli.py  git_diff_adapter.py  path_chain.py  protected_source_manifest.py  result_contract.py  safe_artifact_io.py  source_mutation_demo_runtime.py  strict_json.py  (+1 more)
tests/: test_agent_preflight.py  test_bundle_verifier.py  test_bundle_verifier_platform_contract.py  test_bundle_verifier_semantic_binding.py  test_claude_code_pretooluse.py  test_git_adapter_platform_contract.py  test_git_diff_adapter.py  test_git_path_result_contract.py  test_git_publication_binding.py  test_git_ref_storage.py  test_git_snapshot_closure.py  test_protected_source_manifest.py  test_public_cli.py  test_public_release_candidate.py  test_source_mutation_policy_gate.py  test_strict_json_boundaries.py
(+2 files in other folders)
